<resources>
    <string name="app_name">Home Pharmacy</string>
    <string name="account_login">Account Login</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_user">Register User</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="by_programer"> © Amira Hamam \n Njoud Al-Shaer</string>
    <string name="welcome">WELCOME</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reminder_question">Select a Reminder Question:</string>
    <string name="reminder_answer">your Reminder Answer</string>
    <string name="drug_c_name">commercial name</string>
    <string name="drug_s_name">scientific name</string>
    <string name="concentration">concentration</string>
    <string name="home_drugs">Drugs Home</string>
    <string name="drugs">Drugs</string>
    <string name="members">Members</string>
    <string name="first_aid">First Aid</string>
    <string name="info">Information</string>
    <string name="type">Type: </string>
    <string name="indication">Indication: </string>
    <string name="side_effects">Side Effects: </string>
    <string name="pregnant_allowed">Allowed for pregnant? </string>
    <string name="drug_description">Description: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="warnings">Warnings</string>
    <string name="members_home">Members Home</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="pregnant_q">Is She Pregnant?</string>
    <string name="add">Add</string>
    <string name="drug_for">drug for: </string>
    <string name="start_date">Start Date: </string>
    <string name="end_date">End Date: </string>
    <string name="dose">Dose: </string>
    <string name="dose_quantity">Dose Quantity</string>
    <string name="dose_repeat">Dose Repeat</string>
    <string name="description">Description: </string>
    <string name="course_information">Course Information</string>
    <string name="slash">/</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_mem">Delete Member</string>
    <string name="_search">Search</string>
    <string name="by_name">Search by drug name</string>
    <string name="by_indication">Search by drug indication</string>
    <string name="add_to_my_list">Add to list</string>
    <string name="delete_to_my_list">Delete from List</string>
    <string name="first_time">First Time</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="new_course">New Course</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="channel_name">"my_channel_01</string>
    <string name="share">Share</string>
    <string name="log_out">LogOut</string>
    <string name="member_course">Member Drug Courses</string>
    <string name="search_options">Search Option</string>
    <string name="drug_information">Drug Information</string>
    <string name="new_member">New Member</string>
    <string name="seeOnYoutube">See on Youtube</string>
    <string name="suggested_medication">Suggested medication</string>
    <string name="enterEmail">Enter Your E-mail Please:</string>
    <string name="next">Next</string>
    <string name="new_password">New Password: </string>
    <string name="update_password">Update Password</string>
    <string name="msgReco">Let me recommend you this Home Pharmacy App , </string>
    <string name="webSite">http://youtube.com/</string>
    <string name="choose_one">choose one</string>
    <string name="available_in">Available in: </string>
    <string name="english_information">Enter Drug Information in English: </string>
    <string name="arabic_information">Enter Drug Information in Arabic: </string>
    <string name="start_scan">Start Scan</string>
    <string name="scan_meg">Now Please Scan your drug Barcode/QR Code: </string>
    <string name="submite">Submit</string>
    <string name="scan_done">Drug Code Scanned Successfully! </string>
    <string name="save_and_skip_scan">Save and Skip scan</string>
    <string name="my_drugs">My Drugs</string>
    <string name="search_for_drug">Search For Drug</string>
    <string name="new_drug">Add New Drug</string>



    <!--preferance-->
    <string name="pref_lang_label">Current Language </string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_lang_true">English</string>
    <string name="pref_lang_false">Arabic</string>

    <string name="_type">Type..</string>
    <string-array name="array_search_options">
        <item>Select Search Option..</item>
        <item>Search by drug name</item>
        <item>Search by drug indication</item>
        <item>Search by Barcode Scanning</item>
    </string-array>

    <string-array name="array_question">
        <item>What primary school did you attend?</item>
        <item>In what town or city was your first full time job?</item>
        <item>Your Mother Family Name?</item>
        <item>What is the middle name of your oldest child?</item>
    </string-array>

    <string-array name="array_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="array_yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="array_time">
        <item>12 AM</item><!--00:00:00-->
        <item>1 AM</item><!--01:00:00-->
        <item>2 AM</item><!--02:00:00-->
        <item>3 AM</item><!--03:00:00-->
        <item>4 AM</item><!--04:00:00-->
        <item>5 AM</item><!--05:00:00-->
        <item>6 AM</item><!--06:00:00-->
        <item>7 AM</item><!--07:00:00-->
        <item>8 AM</item><!--08:00:00-->
        <item>9 AM</item><!--09:00:00-->
        <item>10 AM</item><!--10:00:00-->
        <item>11 AM</item><!--11:00:00-->
        <item>12 PM</item><!--12:00:00-->
        <item>1 PM</item><!--13:00:00-->
        <item>2 PM</item><!--14:00:00-->
        <item>3 PM</item><!--15:00:00-->
        <item>4 PM</item><!--16:00:00-->
        <item>5 PM</item><!--17:00:00-->
        <item>6 PM</item><!--18:00:00-->
        <item>7 PM</item><!--19:00:00-->
        <item>8 PM</item><!--20:00:00-->
        <item>9 PM</item><!--21:00:00-->
        <item>10 PM</item><!--22:00:00-->
        <item>11 PM</item><!--23:00:00-->
    </string-array>

</resources>
