<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/photo_placeholder">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke"
            android:focusable="true"
            android:id="@+id/layout_drug_item1"
            android:layout_margin="10dp"
            android:padding="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="12dp"
                android:id="@+id/view2"
                app:cardCornerRadius="40dp"
                android:layout_centerHorizontal="true"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                android:layout_margin="8dp"
                android:padding="8dp">
                <ImageView
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:id="@+id/imageView1"
                    android:src="@drawable/drug_icon"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                </ImageView>

            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/drug_c_name"
                        android:padding="8dp"
                        android:textSize="30sp"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/tvDrugCName"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/drug_s_name"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:textColor="@color/theme_primary_dark"
                        android:id="@+id/tvDrugSName"
                        android:textStyle="italic"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_login"
                        android:padding="8dp"
                        android:textSize="10sp"
                        android:textColor="@color/text_color"
                        android:id="@+id/tvDrugC"
                        android:textStyle="italic"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/info"
            android:background="@drawable/stroke1"
            android:layout_margin="8dp"
            android:padding="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:background="@drawable/stroke">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:text="@string/drug_for"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:layout_weight="0.6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/drug_for"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:id="@+id/tv_drug_for"
                    android:layout_weight="0.4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_shape"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:padding="8dp">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:text="@string/start_date"
                    android:padding="8dp"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/start_date"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:id="@+id/tv_drug_start_date" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_shape"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:padding="8dp">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:text="@string/end_date"
                    android:padding="8dp"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/end_date"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:id="@+id/tv_drug_end_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_shape"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:padding="8dp">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:text="@string/dose"
                    android:padding="8dp"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/dose"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:id="@+id/tv_drug_dose" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_shape"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:padding="8dp">
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_shape"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:padding="8dp">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:text="@string/description"
                    android:padding="8dp"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/drug_description"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:id="@+id/tv_drug_description" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:background="@drawable/stroke1"
                android:id="@+id/btnDelete"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
