<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <include
        layout="@layout/app_bar_main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="40dp">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:background="@color/photo_placeholder">
        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/register_icon"
            android:elevation="4dp"
            android:contentDescription="@string/user_name"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_below="@id/user_profile_photo"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:id="@+id/etRFN"
                    android:background="@drawable/stroke"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="number"
                    android:ems="10"
                    android:layout_marginTop="10dp"
                    android:id="@+id/etRAge"
                    android:background="@drawable/stroke"
                    android:padding="8dp"
                    android:hint="@string/age" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:id="@+id/tvGender"
                        android:layout_marginTop="10dp"
                        android:padding="8dp"
                        android:layout_weight="0.5"/>
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/array_gender"
                        android:layout_marginTop="10dp"
                        android:padding="8dp"
                        android:background="@color/photo_placeholder"
                        android:layout_weight="0.5"
                        android:textAlignment="center"/>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pregnant_q"
                    android:id="@+id/tvPregnant"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:layout_weight="0.5"/>
                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/array_yes_no"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:background="@color/photo_placeholder"
                    android:visibility="gone"
                    android:layout_weight="0.5"
                    android:textAlignment="center"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line_shape"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="1dp"
                    android:padding="8dp">
                </LinearLayout>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@drawable/stroke"
                    android:padding="8dp"
                    android:id="@+id/etREmail"
                    android:hint="@string/email" />
                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main2"
        app:menu="@menu/activity_main2_drawer" />
</android.support.v4.widget.DrawerLayout>
