<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:foregroundGravity="center"
            android:id="@+id/myImageView"
            android:background="@drawable/side_nav_bar"/>
        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/myImageView"
            android:layout_alignTop="@id/myImageView"
            android:layout_alignRight="@id/myImageView"
            android:layout_alignBottom="@id/myImageView"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/home_drugs"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/array_search_options"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@color/photo_placeholder"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:background="@drawable/stroke"
            android:drawableTint="@color/colorPrimary"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:drawablePadding="8dp"
            android:maxLines="1"
            android:ems="10"
            android:padding="8dp"
            android:hint="@string/_type"
            android:inputType="text"
            android:id="@+id/etSearch"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/_search"
            android:textSize="24dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:id="@+id/btnSearch"/>

    </LinearLayout>

</LinearLayout>