<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/photo_placeholder"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="8sp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:elevation="12dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:text="@string/new_password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:background="@drawable/stroke"
                android:drawableTint="@color/colorPrimary"
                android:maxLines="1"
                android:ems="10"
                android:padding="8dp"
                android:hint="@string/new_password"
                android:inputType="text"
                android:id="@+id/etNewPassword"/>



            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@color/colorPrimary"
                android:text="@string/update_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:id="@+id/btnUpdatePassword"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/user_icon_symbol_vector"
        android:elevation="12dp"
        android:contentDescription="@string/user_name"/>
</RelativeLayout>